<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_android_name">小杨kotlin</string>


    <!--wanAndroid kotlin-->
    <!--用户-->
    <string name="my_collect">我的收藏</string>
    <string name="my_theme">切换主题</string>
    <string name="about_app">关于软件</string>
    <string name="nav_web">网站导航</string>

    <!-- 关于软件-->
    <string name="app_introduce">软件简述</string>
    <string name="app_introduce_content">WanAndroid安卓客户端是根据张鸿洋老师的WanAndroid开放API开发。WanAndroid项目收集了来自CSDN、掘金、简书等平台的热门Android技术博客，建立了丰富的安卓知识体系。是一个安卓开发者用于学习和技术积累的优良平台。欢迎各位Android开发者开发一个属于自己的WanAndroid项目！</string>
    <string name="app_home">WanAndroid主页：http://www.wanandroid.com</string>
    <string name="app_open_api">开放API地址：http://www.wanandroid.com/blog/show/2</string>
    <string name="app_git_src">本项目地址：https://github.com/yangchong211/YCAudioPlayer</string>
    <string name="app_developer">关于开发者：杨充</string>
    <string name="app_developer_blog">CSDN地址：https://blog.csdn.net/m0_37700275/article/list/1</string>
    <string name="app_developer_git">gitHub：https://github.com/yangchong211</string>

    <string name="collect_fail_pls_login">收藏失败，请先登录</string>
    <string name="select_kind">选择分类</string>
    <string name="kinds">分类：</string>
    <string name="kinds_two">分类</string>
    <string name="share_app_content">叮咚，生活小助手！叮咚开源地址：https://github.com/yangchong211</string>
    <string name="search">搜索</string>

    <string name="login_password">密码</string>
    <string name="login_username">用户名</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="prompt_email">Email(登录不需要填写)</string>
    <string name="login_click_to_register">还没账号？点此注册</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
